--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
+    "async": "^3.1.1",
     "axios": "^0.19.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
